--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,10 +82,8 @@ div.item.box.on, div.item.box.off, div.item.box.toggle {
 	width: 28px ! important;
   border-radius: 3px ! important;
   border: 1px solid;
-  webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
   box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
   line-height: 1.5;
-  box-sizing: border-box;
   background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
   text-shadow: 0 1px 0 #fff;
 }
@@ -106,7 +104,7 @@ div.item.box.off:before, .icon-action-off:before{
 }
 div.item.box.toggle:before, .icon-action-toggle:before{
 	content: "\e031";
-	color: #1E90FF ! important;
+	color: #000 ! important;
 }
 
 div.item.range.duration {
